KMU - Fixed Headers and Jump Links

--- a/_base/general.less
+++ b/_base/general.less
@@ -9,6 +9,10 @@
 }
 */
 
+* {
+	scroll-margin-top: 5rem;
+}
+
 html {
 	cursor: default; /* Use the default cursor in all browsers (opinionated). */
 	font-size: 62.5%; /* This will set all REM to 10 px */
